--- a/EasyOCR10/ScanningDialog.xaml
+++ b/EasyOCR10/ScanningDialog.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Title="Scanning..."
+    Opened="ContentDialog_Opened"
     SecondaryButtonText="Cancel"
     SecondaryButtonClick="ContentDialog_SecondaryButtonClick">
 
